--- a/book/revenue.html
+++ b/book/revenue.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="valueprop.html"><strong aria-hidden="true">2.</strong> Value Proposition</a></li><li class="chapter-item expanded "><a href="tool.html"><strong aria-hidden="true">3.</strong> Charisma as a Tool</a></li><li class="chapter-item expanded "><a href="network.html"><strong aria-hidden="true">4.</strong> Charisma as a Network</a></li><li class="chapter-item expanded "><a href="revenue.html" class="active"><strong aria-hidden="true">5.</strong> Revenue Model</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="valueprop.html"><strong aria-hidden="true">2.</strong> Value Proposition</a></li><li class="chapter-item expanded "><a href="tool.html"><strong aria-hidden="true">3.</strong> Charisma as a Tool</a></li><li class="chapter-item expanded "><a href="network.html"><strong aria-hidden="true">4.</strong> Charisma as a Network</a></li><li class="chapter-item expanded "><a href="revenue.html" class="active"><strong aria-hidden="true">5.</strong> Revenue Model</a></li><li class="chapter-item expanded "><a href="structure.html"><strong aria-hidden="true">6.</strong> Structure Proposal</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -161,6 +161,9 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next" href="structure.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -172,6 +175,9 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next" href="structure.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
